--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = [
+    "torch>=2.3.1",
+    "huggingface_hub>=0.23.4",
+    "safetensors>=0.4.3",
+    "diffusers>=0.29.0",
+    "aiortc>=1.9.0",
+    "imageio>=2.34.1",
 ]
 
 [project.urls]
