--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "aiortc>=1.9.0",
     "imageio>=2.34.1",
     "accelerate>=0.31.0",
+    "ffmpeg-python>=0.2.0",
 ]
 
 [project.urls]
